# DOMinator

./: .gitignore  BookMap-mk1.cpp  BookMap-mk1.sln  BookMap-mk1.vcxproj  BookMap-mk1.vcxproj.filters  CMakeLists.txt  Heatmap.cpp  Heatmap.h  LICENCE  Order.h  OrderBook.cpp  OrderBook.h  README.md  TextRenderer.h  imgui.ini  main.cpp  utils.h
assets/: metrics.csv  metrics_540_1.csv  trades.csv  trades_540_1.csv
include/: Heatmap.h  OrderBook.h  Shader.h  SimuParams.h  TextRenderer.h  YAxis.h  input_callbacks.h  pch.h  renderDomHistogram.h  shaders.hpp  utils.h
include/AI/: Activations.h  Conv2D.h  Layer.h  NeuralNetwork.h  RewardWindow.h  TradingAI.h
include/Densities/: SimuParams.h  densities_add_liq.h  densities_mod_liq.h
include/Engine/: OrderBook.h
include/Text/: TextRenderer.h  YAxis.h
include/UI/: buttonsForTrades.h  model_parameters.h
include/densities/: density_brownian.h  density_power.h  density_utils.h
include/engine/: SimuParams.h
include/glad/: glad.h
scripts/: metrics.py
src/: Heatmap.cpp  OrderBook.cpp  SimuParams.cpp  TextRenderer.cpp  YAxis.cpp  glad.c  input_callbacks.cpp  main.cpp  renderDomHistogram.cpp
src/AI/: NeuralNetwork.cpp  TradingAI.cpp  configAI.json
src/Text/: TextRenderer.cpp  YAxis.cpp
src/UI/: buttonsForTrades.cpp  model_parameters.cpp
src/densities/: SimuParams.cpp  densities_add_liq.cpp  densities_mod_liq.cpp  density_brownian.cpp  density_power.cpp  density_utils.cpp
src/geometry/: Quad.cpp  Quad.h
src/shaders/: Shader.cpp  button.frag  button.vert  heatmap.frag  heatmap.vert  shader.frag  text.frag  text.vert
